test/expected/declare_nrfi_v-01-c++.out
declare f as _Noreturn function (int) returning void
             ^
14: error: "_Noreturn": unsupported attribute in C++; did you mean "noreturn"?
